dbeaver/dbeaver#11453 Show default schema in schema selector